src/source/public/map.css
/* ... */
.responsive-table li {
    border-radius: 3px;
    padding: 25px 30px;
    display: flex;
    justify-content: space-between;
    margin-bottom: 15px;
  }

.table-header {
    background-color: #95A5A6;
    font-size: 14px;
    text-transform: uppercase;
    letter-spacing: 0.03em;
    margin-top: 30px;
    position: sticky;
    top: 0;
    z-index: 2;

}
.responsive-row {
    max-height: 390px;
    overflow-y: auto;
    margin: 0;
    padding-bottom: 0;
    list-style: none;
    position: relative;
}

.table-row {
    background-color: #ffffff;
    box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.1);

}

.col-1 {
    flex-basis: 16%;
    text-align: center;
}

.col-2 {
    flex-basis: 13%;
    text-align: center;
}
.col-3 {
    flex-basis: 13%;
    text-align: center;
}
.col-4 {
    flex-basis: 13%;
    text-align: center;
}
.col-5 {
    flex-basis: 13%;
    text-align: center;
}
.col-6 {
    flex-basis: 16%;
    text-align: center;
}
.col-7 {
    flex-basis: 16%;
    text-align: center;
} 


@media all and (max-width: 767px) {
    .table-header {
    display: none;
    }
    li {
    display: block;
    }
    .col {
    
    flex-basis: 100%;
    display: flex;
    padding: 10px 0;
    }
    .col :before {
        color: #6C7A89;
        padding-right: 10px;
        content: attr(data-label);
        flex-basis: 50%;
        text-align: right;
    }

} 

/* Table in Orders Page */

.table2 {
    max-width: 1300px;
    margin-left: -5%;
    margin-right: auto;
    padding-left: 10px;
    padding-right: 10px;
    width: 100%;
}


.responsive-table li {
    border-radius: 3px;
    padding: 25px 30px;
    display: flex;
    justify-content: space-between;
    margin-bottom: 15px;
  }

.table-header {
    background-color: #95A5A6;
    font-size: 14px;
    text-transform: uppercase;
    letter-spacing: 0.03em;
    margin-top: 30px;
    position: sticky;
    top: 0;
    z-index: 2;

}
.responsive-row {
    max-height: 390px; 
    overflow-y: auto;
    margin: 0;
    padding-bottom: 0;
    list-style: none;
    position: relative;
}

.table-row {
    background-color: #ffffff;
    box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.1);

}

.productContent {
    width: 120px;
    height: 0px;
    flex-direction: column;
    align-items: center;
    background-color: rgb(230, 239, 253);
    color: #000;
    text-align: center;
    border-radius: 5px;
    padding: 30px 30px 40px;
    z-index: 4; 
    position: absolute;
    /* margin-top: -8%;
    margin-left: -92%; */
    display: none; 
    top: calc(100% + 10px); 
    left: 0; 
}

.productContent::after{
    margin-top: 10px;
    position: absolute;
}

.col-1 {
    flex-basis: 7%;
    text-align: center;
}


.col-1 .productContent {
    width: 120px;
    height: 0px;
    flex-direction: column;
    align-items: center;
    background-color: rgb(230, 239, 253);
    color: #000;
    text-align: center;
    border-radius: 5px;
    padding: 30px 30px 40px;
    z-index: 4; 
    position: absolute;
    /* margin-top: -8%;
    margin-left: -92%; */
    display: none; 
    top: calc(100% + 10px); 
    left: 0; 
}

.col-1 .productContent::after{
    margin-top: 10px;
    position: absolute;
}


.col-1 svg{
    width: 10px;
    height: 10px;
    color: Black;
    margin-left: -30px;
    margin-right: 20px;
    margin-top: 2px;

}
.col-2 {
    flex-basis: 11%;
    text-align: center;
}
.col-3 {
    flex-basis: 11%;
    text-align: center;
}
.col-4 {
    flex-basis: 13%;
    text-align: center;
}
.col-5 {
    flex-basis: 12%;
    text-align: center;
}
.col-6 {
    flex-basis: 10%;
    text-align: center;
}
.col-7 {
    flex-basis: 10%;
    text-align: center;
} 

.col-8 {
    flex-basis: 10%;
    text-align: center;
}
.col-9 {
    flex-basis: 10%;
    text-align: center;
} 


@media all and (max-width: 767px) {
    .table-header {
    display: none;
    }
    li {
    display: block;
    }
    .col {
    
    flex-basis: 100%;
    display: flex;
    padding: 10px 0;
    }
    .col :before {
        color: #6C7A89;
        padding-right: 10px;
        content: attr(data-label);
        flex-basis: 50%;
        text-align: right;
    }

} 

/* Table in Sales Page */

.table3 {
    max-width: 1200px;
    margin-left: -5%;
    margin-right: auto;
    padding-left: 10px;
    padding-right: 10px;
    width: 100%;
}


.responsive-table li {
    border-radius: 3px;
    padding: 25px 30px;
    display: flex;
    justify-content: space-between;
    margin-bottom: 15px;
  }

.table-header {
    background-color: #95A5A6;
    font-size: 14px;
    text-transform: uppercase;
    letter-spacing: 0.03em;
    margin-top: 30px;
    position: sticky;
    top: 0;
    z-index: 2;

}
.responsive-row {
    max-height: 150px;
    overflow-y: auto;
    margin: 0;
    padding-bottom: 0;
    list-style: none;
    position: relative;
}

.table-row {
    background-color: #ffffff;
    box-shadow: 0px 0px 9px 0px rgba(0,0,0,0.1);

}

.productContent {
    width: 120px;
    height: 0px;
    flex-direction: column;
    align-items: center;
    background-color: rgb(230, 239, 253);
    color: #000;
    text-align: center;
    border-radius: 5px;
    padding: 30px 30px 40px;
    z-index: 4; 
    position: absolute;
    /* margin-top: -8%;
    margin-left: -92%; */
    display: none; 
    top: calc(100% + 10px); 
    left: 0; 
}

.productContent::after{
    margin-top: 10px;
    position: absolute;
}

.col-1 {
    flex-basis: 17%;
    text-align: center;
}


.col-1 .productContent {
    width: 120px;
    height: 0px;
    flex-direction: column;
    align-items: center;
    background-color: rgb(230, 239, 253);
    color: #000;
    text-align: center;
    border-radius: 5px;
    padding: 30px 30px 40px;
    z-index: 4; 
    position: absolute;
    /* margin-top: -8%;
    margin-left: -92%; */
    display: none; 
    top: calc(100% + 10px); 
    left: 0; 
}

.col-1 .productContent::after{
    margin-top: 10px;
    position: absolute;
}
/* ... */

